--- a/main page.html
+++ b/main page.html
@@ -23,8 +23,8 @@
 		
 		<div class="col-sm-6 nav_name"><h1>Gabriel Perez</h1></div>
 		<div class="col-sm-3 nav_right">
-			<a href="www.facebook.com" alt="Facebook"><img src="images/fb_logo.png" style="height: 20px; width: 20px; margin-right: 10px;" /></a>
-			<a href="www.linkedin.com" alt="LinkedIn"><img src="images/linkedin_logo.png" style="height: 50px; width: 50px;" /></a>
+			<a href="https://www.facebook.com/gabriel.k.perez?ref=bookmarks" alt="Facebook"><img src="images/fb_logo.png" style="height: 20px; width: 20px; margin-right: 10px;" /></a>
+			<a href="https://www.linkedin.com/in/gabriel-perez-34b943136/" alt="LinkedIn"><img src="images/linkedin_logo.png" style="height: 50px; width: 50px;" /></a>
 		</div>
 	</section>
 
@@ -33,6 +33,8 @@
 			<h1 style="padding-top: 20px;">Gabriel Perez</h1>
 			<h4>Web Developer & Student at UTN Bueno Aires, Argentina</h4>
 			<h5>scroll down to see portfolio</h5>
+
+			<h1 id="main_quote"><i></i></h1>
 		</div>
 
 
@@ -45,7 +47,7 @@
 		
 			<div class="col-sm-8" id="container_1">
 				<figure class="col-sm-5" id="website_1">
-					<img src="images/el_pial.png" class="image-responsive" id="img_fade" style="position: relative; height: auto; width: auto;" />
+					<a href="https://sandlee09.github.io/El_Pial2/"><img src="images/el_pial.png" class="image-responsive" id="img_fade" style="position: relative; height: auto; width: auto;" /></a>
 					<div style="background-color: #191919;"><h2 style="color: white; font-family: nyty; margin-top: 0px; padding-top: 30px; padding-bottom: 30px;">"El Pial de Zelaya"</h2></div>
 				</figure>
 				<figure class="col-sm-5"  id="website_2">
@@ -55,6 +57,8 @@
 			</div>
 			
 		</section>
+
+		<button id="scroll_btn" >Scroll Top</button>
 </body>
 
 </html>
