--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <section class="jumbotron">
 	<div class = "row text-center">
 		<h1>Gabriel Perez</h1>
-		<h3>Web Developer</h3>
+		<h3>Web Developer / Programador (Front End)</h3>
 	
 	<div class="buttons">
-		<a href="main page.html" style="text-decoration: none;"><button style="margin-right: 30px;" >Enter (English)</button></a>
-		<a><button>Entrar (Spanish)</button></a>
+		<a href="main page - english.html" style="text-decoration: none;"><button style="margin-right: 30px;" >Enter (English)</button></a>
+		<a href="main page - spanish.html" style="text-decoration: none;"><button>Entrar (Spanish)</button></a>
 	</div>
 	</div>
 </section>
