--- a/main page - spanish.html
+++ b/main page - spanish.html
@@ -13,13 +13,19 @@
 	
 <body>
 	<section class="col-xs-12 navbar">
-	
+
 
 	<div class="navbar_left col-xs-3">
-		<img src="images/menu_icon.png" class="menu_icon image-responsive" />
+		<div class="menu_container">
+			<img src="images/menu_icon.png" class="menu_icon image-responsive" />
+			<div class="dropdown_menu">
+	    		<a href="main page - spanish.html" style="color: #4286f4;">Trabajo</a>
+	    		<a href="main page - spanish.html">Perfil/Contactar</a>
+  			</div>
+  		</div>	
 		<ul style="list-style: none;">
-			<a href="main page.html" style="text-decoration: none"><li style="float: left; padding: 5px; color: #4286f4;"><h4 id="menu_text">Trabajo</h4></li></a>
-			<a href="main page.html" style="text-decoration: none"><li style="float: left; padding: 5px; color: white;"><h4 id="menu_text">Perfil/Contactar</h4></li></a>
+			<a href="main page - spanish.html" style="text-decoration: none"><li style="float: left; padding: 5px; color: #4286f4;"><h4 id="menu_text">Trabajo</h4></li></a>
+			<a href="main page - spanish.html" style="text-decoration: none"><li style="float: left; padding: 5px; color: white;"><h4 id="menu_text">Perfil/Contactar</h4></li></a>
 		</ul>
 	</div>
 		<div class="col-xs-3 nav_right">
@@ -50,11 +56,12 @@
 			<div class="col-sm-8" id="container_1">
 				<figure class="col-sm-5" id="website_1">
 					<a href="https://sandlee09.github.io/El_Pial2/"><img src="images/el_pial.png" class="image-responsive" id="img_fade" style="position: relative; height: auto; width: auto;" /></a>
-					<div style="background-color: #191919;"><h2 style="color: white; font-family: nyty; margin-top: 0px; padding-top: 30px; padding-bottom: 30px;">"El Pial de Zelaya"</h2></div>
+					<div style="background-color: #191919;" id="website1_name"><h2 style="color: white; font-family: nyty; margin-top: 0px; padding-top: 30px; padding-bottom: 30px;">"El Pial de Zelaya"</h2></div>
 				</figure>
+				
 				<figure class="col-sm-5"  id="website_2">
 					<img src="images/project 2.png" class="image-responsive" id="img_fade" style="position: relative; height: auto; width: auto;" />
-					<div style="background-color: #191919;"><h2 style="color: white; font-family: nyty; margin-top: 0px; padding-top: 30px; padding-bottom: 30px;">"Proyecto 2"</h2></div>
+					<div style="background-color: #191919;" id="website2_name"><h2 style="color: white; font-family: nyty; margin-top: 0px; padding-top: 30px; padding-bottom: 30px;">"Pronto"</h2></div>
 				</figure>
 			</div>
 			
