--- a/main page - english.html
+++ b/main page - english.html
@@ -16,23 +16,32 @@
 
 
 	<div class="navbar_left col-xs-3">
-		<div class="menu_container">
-			<img src="images/menu_icon.png" class="menu_icon image-responsive" />
-			<div class="dropdown_menu">
-	    		<a href="main page - english.html" style="color: #4286f4;">Work</a>
-	    		<a href="main page - english.html">Profile/Contact</a>
-  			</div>
-  		</div>	
+		<div class="dropdown menu_icon">
+		    <button class="btn btn-secondary dropdown-toggle"
+		          type="button" id="dropdownMenu1" data-toggle="dropdown"
+		          aria-haspopup="true" aria-expanded="false" style="background-color: #191919;">
+		        <img src="images/menu_icon.png"/>
+		    </button>
+		<div class="dropdown-menu" aria-labelledby="dropdownMenu1" style="left: 15px; top: 35px; background-color: #191919;">
+		    <a class="dropdown-item" href="main page - english.html" style="color: #4286f4;">Work</a>
+		    <a class="dropdown-item" href="contact english.html">About/Contact</a>
+		    <a class="dropdown-item" href="https://www.facebook.com/gabriel.k.perez?ref=bookmarks">Facebook</a>
+		    <a class="dropdown-item" href="https://www.linkedin.com/in/gabriel-perez-34b943136/">LinkedIn</a>
+		</div>
+	</div>
+
+
+
 		<ul style="list-style: none;">
-			<a href="main page - spanish.html" style="text-decoration: none"><li style="float: left; padding: 5px; color: #4286f4;"><h4 id="menu_text">Work</h4></li></a>
-			<a href="main page - spanish.html" style="text-decoration: none"><li style="float: left; padding: 5px; color: white;"><h4 id="menu_text">Profile/Contact</h4></li></a>
+			<a href="main page - english.html" style="text-decoration: none"><li style="float: left; padding: 5px; color: #4286f4;"><h4 id="menu_text">Work</h4></li></a>
+			<a href="contact english.html" style="text-decoration: none"><li style="float: left; padding: 5px; color: white;"><h4 id="menu_text">Profile/Contact</h4></li></a>
 		</ul>
 	</div>
 		<div class="col-xs-3 nav_right">
 			<a href="https://www.facebook.com/gabriel.k.perez?ref=bookmarks" alt="Facebook"><img src="images/fb_logo.png" style="height: 20px; width: 20px; margin-right: 10px;" /></a>
 			<a href="https://www.linkedin.com/in/gabriel-perez-34b943136/" alt="LinkedIn"><img src="images/linkedin_logo.png" style="height: 50px; width: 50px;" /></a>
 		</div>
-		<div class="col-xs-6 nav_name"><h1>Gabriel Perez</h1></div>
+		<div class="nav_name"><h1>Gabriel Perez</h1></div>
 		
 	</section>
 
